frame/support/test/tests/pallet_ui/inherent_002.stderr
error[E0046]: not all trait items implemented, missing: `Call`, `Error`, `INHERENT_IDENTIFIER`, `create_inherent`
  --> $DIR/inherent_002.rs:19:2
   |
19 |     impl<T: Trait> ProvideInherent for Module<T> {}
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ missing `Call`, `Error`, `INHERENT_IDENTIFIER`, `create_inherent` in implementation
   |
   = help: implement the missing item: `type Call = Type;`
   = help: implement the missing item: `type Error = Type;`
   = help: implement the missing item: `const INHERENT_IDENTIFIER: [u8; 8] = value;`
   = help: implement the missing item: `fn create_inherent(_: &sp_inherents::InherentData) -> std::option::Option<<Self as sp_inherents::ProvideInherent>::Call> { todo!() }`
